--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="logo">
           <a href="./index.html">
-            <img src="./assets/images/logo.png" alt="logo"></a>
+            <img src="./assets/images/logo__4_-removebg-preview.png" alt="logo"></a> 
         </div>
         <div class="main-navbar">
           <ul class="desktop-navlist">
