--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
   <meta charset="UTF-8">
@@ -17,11 +17,13 @@
   <header class="site-header">
     <div class="container">
       <nav class="desktop-menu">
-        <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+        <div class="menu-icon-container">
+          <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+        </div>
 
         <div class="logo">
           <a href="./index.html">
-            <img src="./assets/images/logo__4_-removebg-preview.png" alt="logo"></a> 
+            <img src="./assets/images/logo.png" alt="logo"></a>
         </div>
         <div class="main-navbar">
           <ul class="desktop-navlist">
@@ -36,9 +38,9 @@
                 <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
                 <li><a href="./star.html">Ξενοδοχείο Star</a></li>
                 <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί μας</a></li>
               </ul>
             </li>
+            <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί μας</a></li>
           </ul>
           <div class="close-icon"><i class="fa-solid fa-x"></i></div>
         </div>
@@ -71,15 +73,14 @@
   <div class="home-page-content">
     <div class="container">
       <div class="home-page-content-wrapper">
-        <!-- <div class="home-page-content-image"><img src="./assets/images/home-page-image.jpg" alt="image"></div> -->
         <div class="home-page-content-text">
           <div class="home-page-text-wrapper">
-            <p> Τα καταλύματα Bed in Greece προσφέρουν ένα μοναδικό ταξίδι στην καρδιά της φιλοξενίας. Ο ιστότοπός μας
+            <p> Τα καταλύματα BedinGreece προσφέρουν ένα μοναδικό ταξίδι στην καρδιά της φιλοξενίας. Ο ιστότοπός μας
               παρέχει σε βάθος συγκρίσεις και αξιολογήσεις διαφόρων επιλογών διαμονής, βοηθώντας σας να λάβετε
               τεκμηριωμένες αποφάσεις για το επόμενο ταξίδι σας. Από φιλικά προς το περιβάλλον ξενοδοχεία που δίνουν
               προτεραιότητα στη βιωσιμότητα μέχρι πολυτελή ξενοδοχεία καζίνο που συνδυάζουν ενθουσιασμό και άνεση,
               υπάρχει κάτι για κάθε τύπο ταξιδιώτη.</p>
-            <p>Συγκρίνοντας και αναθεωρώντας αυτούς τους διαφορετικούς τύπους καταλυμάτων, το Bed in Greece στοχεύει να
+            <p>Συγκρίνοντας και αναθεωρώντας αυτούς τους διαφορετικούς τύπους καταλυμάτων, το BedinGreece στοχεύει να
               σας καθοδηγήσει στην εύρεση του τέλειου μέρους για διαμονή στην Ελλάδα. Κάθε κριτική έχει γραφτεί για να
               προσφέρει εμπεριστατωμένες απόψεις, βοηθώντας σας να επιλέξετε μια επιλογή που ταιριάζει καλύτερα στις
               προτιμήσεις και τις ανάγκες σας. Οι εμπεριστατωμένες αξιολογήσεις μας θα σας καθοδηγήσουν στην πληθώρα
@@ -102,7 +103,7 @@
         <div class="home-page-cards-wrapper">
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt=""></div>
+            <div class="home-page-cards-image"><img src="./assets/images/casino-thesa.jpg" alt=""></div>
             <div class="home-page-cards-content">
               <a href="./special-offers.html">
                 <h3>Ειδικές προσφορές</h3>
@@ -111,7 +112,7 @@
           </div>
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt=""></div>
+            <div class="home-page-cards-image"><img src="./assets/images/porto-rio.jpg" alt=""></div>
             <div class="home-page-cards-content">
               <a href="./casino.html">
                 <h3>Ξενοδοχείο Καζίνο</h3>
@@ -120,7 +121,7 @@
           </div>
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt="image"></div>
+            <div class="home-page-cards-image"><img src="./assets/images/aristi.jpg" alt="image"></div>
             <div class="home-page-cards-content">
               <a href="./eco.html">
                 <h3>Ξενοδοχείο ECO</h3>
@@ -129,7 +130,7 @@
           </div>
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt=""></div>
+            <div class="home-page-cards-image"><img src="./assets/images/simos-camping.jpg" alt=""></div>
             <div class="home-page-cards-content">
               <a href="./camping-cabins.html">
                 <h3>Κάμπινγκ με καμπίνες</h3>
@@ -138,7 +139,7 @@
           </div>
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt=""></div>
+            <div class="home-page-cards-image"><img src="./assets/images/santa-marina.jpg" alt=""></div>
             <div class="home-page-cards-content">
               <a href="./star.html">
                 <h3>Ξενοδοχείο Star</h3>
@@ -147,7 +148,7 @@
           </div>
 
           <div class="home-page-cards">
-            <div class="home-page-cards-image"><img src="./assets/images/home-page-card1.jpg" alt=""></div>
+            <div class="home-page-cards-image"><img src="./assets/images/standard-3.jpg" alt=""></div>
             <div class="home-page-cards-content">
               <a href="./standard.html">
                 <h3>Standard Δωμάτια</h3>
@@ -162,51 +163,53 @@
   </section>
   <!-- Home Page Cards Section -->
 
-      <!-- Footer Start -->
-      <footer class="footer">
-        <div class="container">
-            <div class="footer-wrapper">
-             
-                <div class="footer-links footer-items">
-                    <h3>Μενού</h3>
-                    <ul>
-                      <li><a class="active" href="./index.html">Σπίτι</a></li>
-                      <li><a href="./contact-us.html">Επικοινωνήστε μαζί μας</a></li>
-                      <li><a href="./privacy.html">Πολιτική Απορρήτου</a></li>
-                      <li><a href="./terms-contions.html">Οροι και Προϋποθέσεις</a></li>
-                    </ul>
-                </div>
-                <div class="logo-bottom footer-items">
-                  <div><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a></div>
-                  <div class="social-icons">
-                      <div>
-                          <div class="footer-social-icons">
-                              <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                              <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                              <a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-                <div class="footer-quick-links footer-items">
-                    <h3>Γρήγοροι Σύνδεσμοι</h3>
-                    <ul>
-                      <li><a href="./special-offers.html">Ειδικές προσφορές</a></li>
-                      <li><a href="./casino.html">Ξενοδοχείο Καζίνο</a></li>
-                      <li><a href="./eco.html">Ξενοδοχείο ECO</a></li>
-                      <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
-                      <li><a href="./star.html">Ξενοδοχείο Star</a></li>
-                      <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                    </ul>
-                </div>
+  <!-- Footer Start -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrapper">
+
+        <div class="footer-links footer-items">
+          <h3>Μενού</h3>
+          <ul>
+            <li><a class="active" href="./index.html">Σπίτι</a></li>
+            <li><a href="./contact-us.html">Επικοινωνήστε μαζί μας</a></li>
+            <li><a href="./privacy.html">Πολιτική Απορρήτου</a></li>
+            <li><a href="./terms-contions.html">Οροι και Προϋποθέσεις</a></li>
+          </ul>
+        </div>
+        <div class="logo-bottom footer-items">
+          <div class="logo-bottom-container"><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a>
+          </div>
+          <div class="social-icons">
+
+            <div class="footer-social-icons">
+              <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
 
             </div>
-            <div class="copyright">
-                <p>Copyright &copy; 2024 bedingreece.com All rights reserved.</p>
-            </div>
+          </div>
         </div>
-    </footer>
-    <!-- Footer End -->
+        <div class="footer-quick-links footer-items">
+          <h3>Γρήγοροι Σύνδεσμοι</h3>
+          <ul>
+            <li><a href="./special-offers.html">Ειδικές προσφορές</a></li>
+            <li><a href="./casino.html">Ξενοδοχείο Καζίνο</a></li>
+            <li><a href="./eco.html">Ξενοδοχείο ECO</a></li>
+            <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
+            <li><a href="./star.html">Ξενοδοχείο Star</a></li>
+            <li><a href="./standard.html">Standard Δωμάτια</a></li>
+          </ul>
+        </div>
+
+      </div>
+      <div class="copyright">
+        <p> Πνευματικά δικαιώματα &copy; 2024 <span style="color:#30d5c8">bedingreece.com</span> Με την επιφύλαξη παντός
+          δικαιώματος.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- Footer End -->
 
   <script src="./assets/js/jquery.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
