--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8">
@@ -17,11 +17,14 @@
     <header class="site-header">
         <div class="container">
             <nav class="desktop-menu">
-                <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="menu-icon-container">
+                    <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                </div>
+
 
                 <div class="logo">
                     <a href="./index.html">
-                        <img src="./assets/images/" alt="logo"></a>
+                        <img src="./assets/images/logo.png" alt="logo"></a>
                 </div>
                 <div class="main-navbar">
                     <ul class="desktop-navlist">
@@ -36,10 +39,10 @@
                                 <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
                                 <li><a href="./star.html">Ξενοδοχείο Star</a></li>
                                 <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                                <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
-                                        μας</a></li>
                             </ul>
                         </li>
+                        <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
+                                μας</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
@@ -57,7 +60,7 @@
     <!--Pages Banner Section  Start -->
     <section class="banner">
         <div class="banner-image pages-banner-image">
-            <img src="./assets/images/casino-banner-image.jpg" alt="image">
+            <img src="./assets/images/privacy-policy-banner-image.jpg" alt="image">
         </div>
         <div class="banner-text pages-banner-text">
             <div class="pages-banner-text-group">
@@ -72,7 +75,7 @@
         <div class="container">
             <div class="privacy-policy-wrapper">
                 <div class="privacy-policy-group">
-                    <p><span class="hedaing-like">Τελευταία ενημέρωση:</span>17 Ιουλίου 2024</p>
+                    <p><span class="heading-like">Τελευταία ενημέρωση:</span>17 Ιουλίου 2024</p>
                     <p>Αυτή η Πολιτική Απορρήτου περιγράφει τις πολιτικές και τις διαδικασίες μας σχετικά με τη συλλογή,
                         χρήση και αποκάλυψη των πληροφοριών σας όταν χρησιμοποιείτε την Υπηρεσία και σας ενημερώνει
                         για τα δικαιώματα απορρήτου σας και για το πώς σας προστατεύει ο νόμος.</p>
@@ -96,8 +99,7 @@
 
                 <div class="privacy-policy-group">
                     <h3>Ορισμοί</h3>
-                    <h4>Για τους σκοπούς της παρούσας Πολιτικής Απορρήτου:
-                    </h4>
+                    <h4>Για τους σκοπούς της παρούσας Πολιτικής Απορρήτου: </h4>
                     <ul>
                         <li>Λογαριασμός σημαίνει έναν μοναδικό λογαριασμό που δημιουργήθηκε για Εσείς να έχετε
                             πρόσβαση στην Υπηρεσία μας ή σε μέρη της Υπηρεσίας μας.</li>
@@ -309,7 +311,7 @@
                         Υπηρεσίας μας ή είμαστε νομικά υποχρεωμένοι να διατηρούμε αυτά τα δεδομένα για μεγαλύτερες
                         χρονικές περιόδους</p>
 
-                    </p>
+
                 </div>
 
                 <div class="privacy-policy-group">
@@ -349,7 +351,6 @@
                     </p>
                     <p>Λάβετε υπόψη, ωστόσο, ότι ενδέχεται να χρειαστεί να διατηρήσουμε ορισμένες πληροφορίες όταν
                         έχουμε νομική υποχρέωση ή νόμιμη βάση να το πράξουμε.
-                    </p>
                     </p>
                 </div>
 
@@ -455,16 +456,10 @@
                         αλλαγές σε αυτήν την Πολιτική Απορρήτου ισχύουν όταν δημοσιεύονται σε αυτήν τη σελίδα.</p>
                 </div>
 
-
-
-
-
             </div>
         </div>
     </section>
     <!-- Privacy Policy Content Section End -->
-
-
 
     <!--Pages After Cards Text Section Start -->
     <div class="pages-after-cards-text-section">
@@ -493,7 +488,7 @@
                     </ul>
                 </div>
                 <div class="logo-bottom footer-items">
-                    <div><a href="./index.html"> <img src="./assets/images/logo2.svg" alt="logo"></a></div>
+                    <div><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a></div>
                     <div class="social-icons">
                         <div>
                             <div class="footer-social-icons">
@@ -518,7 +513,9 @@
 
             </div>
             <div class="copyright">
-                <p>Copyright &copy; 2024 bedingreece.com All rights reserved.</p>
+                <p> Πνευματικά δικαιώματα &copy; 2024 <span style="color:#30d5c8">bedingreece.com</span> Με την
+                    επιφύλαξη παντός
+                    δικαιώματος.</p>
             </div>
         </div>
     </footer>
