--- a/special-offers.html
+++ b/special-offers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,9 @@
     <header class="site-header">
         <div class="container">
             <nav class="desktop-menu">
-                <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="menu-icon-container">
+                    <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                </div>
 
                 <div class="logo">
                     <a href="./index.html">
@@ -36,10 +38,10 @@
                                 <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
                                 <li><a href="./star.html">Ξενοδοχείο Star</a></li>
                                 <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                                <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
-                                        μας</a></li>
                             </ul>
                         </li>
+                        <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
+                                μας</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
@@ -425,7 +427,7 @@
                     </ul>
                 </div>
                 <div class="logo-bottom footer-items">
-                    <div><a href="./index.html"> <img src="./assets/images/logo2.svg" alt="logo"></a></div>
+                    <div><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a></div>
                     <div class="social-icons">
                         <div>
                             <div class="footer-social-icons">
@@ -450,7 +452,9 @@
 
             </div>
             <div class="copyright">
-                <p>Copyright &copy; 2024 bedingreece.com All rights reserved.</p>
+                <p> Πνευματικά δικαιώματα &copy; 2024 <span style="color:#30d5c8">bedingreece.com</span> Με την
+                    επιφύλαξη παντός
+                    δικαιώματος.</p>
             </div>
         </div>
     </footer>
