--- a/star.html
+++ b/star.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8">
@@ -17,11 +17,14 @@
     <header class="site-header">
         <div class="container">
             <nav class="desktop-menu">
-                <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="menu-icon-container">
+                    <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                </div>
+
 
                 <div class="logo">
                     <a href="./index.html">
-                        <img src="./assets/images/" alt="logo"></a>
+                        <img src="./assets/images/logo.png" alt="logo"></a>
                 </div>
                 <div class="main-navbar">
                     <ul class="desktop-navlist">
@@ -36,10 +39,10 @@
                                 <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
                                 <li><a href="./star.html">Ξενοδοχείο Star</a></li>
                                 <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                                <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
-                                        μας</a></li>
                             </ul>
                         </li>
+                        <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
+                                μας</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
@@ -282,8 +285,8 @@
                                 πολυσύχναστο μπαρ με πανοραμική θέα.
                             </p>
                             <div class="text-left">
-                                <a href="https://www.cavotagoo.com/mykonos"
-                                    class="pages-link-btn" target="_blank">Ελέγξτε
+                                <a href="https://www.cavotagoo.com/mykonos" class="pages-link-btn"
+                                    target="_blank">Ελέγξτε
                                     το
                                     ξενοδοχείο</a>
                             </div>
@@ -301,13 +304,18 @@
     <div class="pages-after-cards-text-section">
         <div class="container">
             <div class="pages-after-cards-text-wrapper">
-                <p>Η πολυτέλεια δεν έχει όρια στη σειρά των ξενοδοχείων 5 αστέρων στην Ελλάδα, όπου η χλιδή συναντά την απαράμιλλη
+                <p>Η πολυτέλεια δεν έχει όρια στη σειρά των ξενοδοχείων 5 αστέρων στην Ελλάδα, όπου η χλιδή συναντά την
+                    απαράμιλλη
                     φιλοξενία. Αφεθείτε στην ηρεμία των ιδιωτικών πισινών με θέα στη Μεσόγειο, γευτείτε γκουρμέ
-                    λιχουδιές φτιαγμένες από τοπικά υλικά ή αναζωογονηθείτε με ολιστικές θεραπείες σπα που έχουν τις ρίζες τους στην αρχαιότητα
-                    Ελληνικές παραδόσεις. Κάθε ξενοδοχείο, με σχολαστική επιμέλεια της BedinGreece, εξασφαλίζει μια απρόσκοπτη συγχώνευση
-                    πολυτέλεια και αυθεντικότητα, δημιουργώντας ένα καταφύγιο όπου κάθε στιγμή είναι εμποτισμένη με κομψότητα και ηρεμία.
+                    λιχουδιές φτιαγμένες από τοπικά υλικά ή αναζωογονηθείτε με ολιστικές θεραπείες σπα που έχουν τις
+                    ρίζες τους στην αρχαιότητα
+                    Ελληνικές παραδόσεις. Κάθε ξενοδοχείο, με σχολαστική επιμέλεια της BedinGreece, εξασφαλίζει μια
+                    απρόσκοπτη συγχώνευση
+                    πολυτέλεια και αυθεντικότητα, δημιουργώντας ένα καταφύγιο όπου κάθε στιγμή είναι εμποτισμένη με
+                    κομψότητα και ηρεμία.
                 </p>
-                <p>Αγκαλιάστε την ουσία της πολυτέλειας στην Ελλάδα, όπου η ιστορία, η φυσική ομορφιά και η απαράμιλλη φιλοξενία
+                <p>Αγκαλιάστε την ουσία της πολυτέλειας στην Ελλάδα, όπου η ιστορία, η φυσική ομορφιά και η απαράμιλλη
+                    φιλοξενία
                     συγκλίνουν για να προσφέρουν μια πραγματικά εξαιρετική διαμονή.</p>
             </div>
         </div>
@@ -329,7 +337,7 @@
                     </ul>
                 </div>
                 <div class="logo-bottom footer-items">
-                    <div><a href="./index.html"> <img src="./assets/images/logo2.svg" alt="logo"></a></div>
+                    <div><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a></div>
                     <div class="social-icons">
                         <div>
                             <div class="footer-social-icons">
@@ -344,17 +352,19 @@
                     <h3>Γρήγοροι Σύνδεσμοι</h3>
                     <ul>
                         <li><a href="./special-offers.html">Ειδικές προσφορές</a></li>
-                <li><a href="./casino.html">Ξενοδοχείο Καζίνο</a></li>
-                <li><a href="./eco.html">Ξενοδοχείο ECO</a></li>
-                <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
-                <li><a href="./star.html">Ξενοδοχείο Star</a></li>
-                <li><a href="./standard.html">Standard Δωμάτια</a></li>
+                        <li><a href="./casino.html">Ξενοδοχείο Καζίνο</a></li>
+                        <li><a href="./eco.html">Ξενοδοχείο ECO</a></li>
+                        <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
+                        <li><a href="./star.html">Ξενοδοχείο Star</a></li>
+                        <li><a href="./standard.html">Standard Δωμάτια</a></li>
                     </ul>
                 </div>
 
             </div>
             <div class="copyright">
-                <p>Copyright &copy; 2024 bedingreece.com All rights reserved.</p>
+                <p> Πνευματικά δικαιώματα &copy; 2024 <span style="color:#30d5c8">bedingreece.com</span> Με την
+                    επιφύλαξη παντός
+                    δικαιώματος.</p>
             </div>
         </div>
     </footer>
