--- a/terms-contions.html
+++ b/terms-contions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8">
@@ -17,11 +17,14 @@
     <header class="site-header">
         <div class="container">
             <nav class="desktop-menu">
-                <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="menu-icon-container">
+                    <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+                </div>
+
 
                 <div class="logo">
                     <a href="./index.html">
-                        <img src="./assets/images/" alt="logo"></a>
+                        <img src="./assets/images/logo.png" alt="logo"></a>
                 </div>
                 <div class="main-navbar">
                     <ul class="desktop-navlist">
@@ -36,10 +39,10 @@
                                 <li><a href="./camping-cabins.html">Κάμπινγκ με καμπίνες</a></li>
                                 <li><a href="./star.html">Ξενοδοχείο Star</a></li>
                                 <li><a href="./standard.html">Standard Δωμάτια</a></li>
-                                <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
-                                        μας</a></li>
                             </ul>
                         </li>
+                        <li class="desktop-menu-option-hide"><a href="./contact-us.html">Επικοινωνήστε μαζί
+                                μας</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
@@ -57,7 +60,7 @@
     <!--Pages Banner Section  Start -->
     <section class="banner">
         <div class="banner-image pages-banner-image">
-            <img src="./assets/images/casino-banner-image.jpg" alt="image">
+            <img src="./assets/images/terms-conditions-banner-image.jpg" alt="image">
         </div>
         <div class="banner-text pages-banner-text">
             <div class="pages-banner-text-group">
@@ -72,9 +75,9 @@
     <section class="terms-conditions-content">
         <div class="container">
             <div class="terms-conditions-wrapper">
-                <p><span class="hedaing-like">Τελευταία ενημέρωση:</span>17 Ιουλίου 2024</p>
-                <div class="terms-conditions-group">
 
+                <div class="terms-conditions-group">
+                    <p><span class="heading-like">Τελευταία ενημέρωση: </span>17 Ιουλίου 2024</p>
                     <p>TΔιαβάστε προσεκτικά αυτούς τους όρους και προϋποθέσεις πριν χρησιμοποιήσετε την Υπηρεσία μας.
                     </p>
                     <h4>Ερμηνεία και Ορισμοί</h4>
@@ -352,7 +355,7 @@
                     </ul>
                 </div>
                 <div class="logo-bottom footer-items">
-                    <div><a href="./index.html"> <img src="./assets/images/logo2.svg" alt="logo"></a></div>
+                    <div><a href="./index.html"> <img src="./assets/images/logo.png" alt="logo"></a></div>
                     <div class="social-icons">
                         <div>
                             <div class="footer-social-icons">
@@ -377,7 +380,9 @@
 
             </div>
             <div class="copyright">
-                <p>Copyright &copy; 2024 bedingreece.com All rights reserved.</p>
+                <p> Πνευματικά δικαιώματα &copy; 2024 <span style="color:#30d5c8">bedingreece.com</span> Με την
+                    επιφύλαξη παντός
+                    δικαιώματος.</p>
             </div>
         </div>
     </footer>
